adjust data augmentation path

--- a/Lesion_Segmentation.ipynb
+++ b/Lesion_Segmentation.ipynb
@@ -677,9 +677,11 @@
         "seed = 3012\n",
         "batch = 4\n",
         "\n",
-        "x_gen = generator_x.flow(imgs, batch_size = batch, shuffle = False, seed = seed)\n",
-        "y_gen = generator_y.flow(masks, batch_size = batch, shuffle = False, seed = seed)\n",
-        "train_generator = zip(x_gen, y_gen)\n"
+        "X_train = generator_x.flow(X_train, batch_size = batch, shuffle = False, seed = seed)\n",
+        "Y_train = generator_y.flow(Y_train, batch_size = batch, shuffle = False, seed = seed)\n",
+        "\n",
+        "X_validating = generator_x.flow(X_validating, batch_size = batch, shuffle = False, seed = seed)\n",
+        "Y_validating = generator_y.flow(Y_validating, batch_size = batch, shuffle = False, seed = seed)"
       ]
     },
     {
